# sdfg-dialect

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: unit_tests.yml  unit_tests_asan.yml  unit_tests_lsan.yml  unit_tests_ubsan.yml
include/sdfg/: CMakeLists.txt  SDFGDialect.h  SDFGDialect.td  SDFGOps.h  SDFGOps.td
include/sdfg/Analysis/: CMakeLists.txt
include/sdfg/Analysis/ExportSDFG/: PassDetail.h  Passes.h  Passes.td
include/sdfg/Conversion/: CMakeLists.txt
include/sdfg/Conversion/LinalgToSDFG/: PassDetail.h  Passes.h  Passes.td
include/sdfg/Conversion/TorchToSDFG/: CMakeLists.txt  PassDetail.h  Passes.h  Passes.td
include/sdfg/Dialect/: CMakeLists.txt  SDFGDialect.h  SDFGDialect.td  SDFGOps.h  SDFGOps.td  SDFGTypes.h  SDFGTypes.td  sdfg.td
include/sdfg/Dialect/controlflow/: block.td  sdfg.td
include/sdfg/Dialect/dataflow/: library_node.td
include/sdfg/Dialect/nodes/: alloca.td  library_node.td  return.td  sdfg.td
include/sdfg/Dialect/ops/: symbol.td
lib/: CMakeLists.txt
lib/sdfg/: CMakeLists.txt  SDFGDialect.cpp  SDFGOps.cpp
lib/sdfg/Analysis/: CMakeLists.txt
lib/sdfg/Analysis/ExportSDFG/: ExportSDFG.cpp
lib/sdfg/Conversion/: CMakeLists.txt
lib/sdfg/Conversion/LinalgToSDFG/: CMakeLists.txt  ConvertLinalgToSDFG.cpp
lib/sdfg/Conversion/TorchToSDFG/: CMakeLists.txt  ConvertTorchToSDFG.cpp
lib/sdfg/Dialect/: CMakeLists.txt  IDGenerator.cpp  SDFGDialect.cpp  SDFGOps.cpp  SDFGTypes.cpp
lib/sdfg/Utils/: IDGenerator.cpp
sdfg-export/: CMakeLists.txt  sdfg-export.cpp
sdfg-opt/: CMakeLists.txt  sdfg-opt.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/sdfg/: dummy.mlir
test/sdfg/Conversion/linalg/: matmul.mlir
test/sdfg/Conversion/torch/: torch_to_sdfg.mlir
test/sdfg/Dialect/: array_type.mlir  library_node.mlir  sdfg.mlir  symbol.mlir
test/sdfg/Dialect/controlflow/: block.mlir  sdfg.mlir
test/sdfg/Dialect/dataflow/: library_node.mlir  library_node_multiple_results.mlir
